--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <meta http-equiv="author" content="I.G.Khalilov" />
+    <meta name="robots" content="noindex,follow" />
+    <meta name="keywords" content="Сalculator, посчитать расход, посчитать амортизацию, расчёт амортизации, расход средний, амортизация, замеки, цели, задачи" />
+    <meta property="og:locale" content="ru_RU" />
+    <meta name="Address" content="Россия, Самара" />
+    <meta property="og:title" content="CAR-DRIVER" />
+    <meta property="og:description" content="CAR-DRIVER" />
+    <meta property="og:type" content="article" />
+    <meta property="og:site_name" content="CAR-DRIVER" />
+    <link rel="shortcut icon" href="../src/shared/assets/icon.png" type="image/png">
+    <link rel="apple-touch-icon" href="../src/shared/assets/icon.png" sizes="167x167">
+    <link rel="manifest" href="manifest.webmanifest">
+    <title>CAR-DRIVER</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
